--- a/src/_lang-flag-icon.scss
+++ b/src/_lang-flag-icon.scss
@@ -19,6 +19,9 @@
 //$include-squared = if true css for squared flags is also created
 $include-squared: false !default; 
 
+//$display-value = value for display:... when element is visible. Default = '' => no class created.
+$display-value: '' !default;
+
 //$flag-list = list of country-codes (XX) where there will be classes flag-icon-XX
 $flag-list: dk, fo, gl !default; 
 
@@ -139,13 +142,13 @@ $list-str: '';
 
 
 //Create the Modernizr-classes for 'show-for-flag-XX' and 'hide-for-flag-XX' the country-codes XX in $flag-modernizr-list
-//using @mixin show-and-hide-for-modernizr-test( $modernizr-test , $parent-element-type: '', $incl-no-selector: true, $fail-as-default: false ){
+//using @mixin show-and-hide-for-modernizr-test( $modernizr-test , $parent-element-type: '', $incl-no-selector: true ){
 @each $flag, $incl-no-selector in $flag-modernizr-list {
-	@include show-and-hide-for-modernizr-test( 'flag-' + $flag , 'html', $incl-no-selector);//, $fail-as-default: false )
+	@include show-and-hide-for-modernizr-test( 'flag-' + $flag , 'html', $incl-no-selector, $display-value);
 }
 
 //Create the Modernizr-classes for 'show-for-lang-YY' and 'hide-for-lang-YY' the language-codes YY in $lang-modernizr-list
 @each $lang, $incl-no-selector in $lang-modernizr-list {
-	@include show-and-hide-for-modernizr-test( 'lang-' + $lang , 'html', $incl-no-selector);//, $fail-as-default: false )
+	@include show-and-hide-for-modernizr-test( 'lang-' + $lang , 'html', $incl-no-selector, $display-value);
 }
 
