--- a/demo/demo.scss
+++ b/demo/demo.scss
@@ -17,6 +17,7 @@ DEMO.scss for github/fcoo/lang-flag-icon/demo/index.html
 @import "../bower_components/modernizr-scss/dist/modernizr-scss";
 
 //MODERNIZR-MEDIAQUERY - http://github.com/FCOO/modernizr-mediaquery
+$include-squared: true;
 @import "../src/lang-flag-icon";
 
 
